{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 371,
  "lineage": "4c4ee782-2044-0a28-0de1-aee742b4d822",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:security-group/sg-0a0c228b1ab67a041",
            "description": "Allow Redis access from within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0c228b1ab67a041",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Redis from VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "go-microservices-redis-sg",
            "name_prefix": "",
            "owner_id": "114851843413",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "go-microservices-redis-sg"
            },
            "tags_all": {
              "Name": "go-microservices-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114851843413",
            "id": "sg-0a0c228b1ab67a041",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:network-acl/acl-025f3fb54bce47410",
            "default_network_acl_id": "acl-025f3fb54bce47410",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-025f3fb54bce47410",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "114851843413",
            "region": "eu-central-1",
            "subnet_ids": [
              "subnet-042f56325de75abe4",
              "subnet-05e83956af121809d",
              "subnet-069c8a829bdd829ee",
              "subnet-0c9b19a081ec7ea54"
            ],
            "tags": {
              "Name": "go-microservices-vpc-default",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "tags_all": {
              "Name": "go-microservices-vpc-default",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:route-table/rtb-08d8ab406781bf006",
            "default_route_table_id": "rtb-08d8ab406781bf006",
            "id": "rtb-08d8ab406781bf006",
            "owner_id": "114851843413",
            "propagating_vgws": null,
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "go-microservices-vpc-default",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "tags_all": {
              "Name": "go-microservices-vpc-default",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:security-group/sg-0d5f5d469435b4a2d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d5f5d469435b4a2d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "114851843413",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "go-microservices-vpc-default",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "tags_all": {
              "Name": "go-microservices-vpc-default",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c93f6c167b0dff3a",
            "arn": "arn:aws:ec2:eu-central-1:114851843413:elastic-ip/eipalloc-0c93f6c167b0dff3a",
            "domain": "vpc",
            "id": "eipalloc-0c93f6c167b0dff3a",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-72-223-6.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.72.223.6",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Name": "go-microservices-vpc-eu-central-1a",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "tags_all": {
              "Name": "go-microservices-vpc-eu-central-1a",
              "Owner": "tirdad",
              "Project": "go-microservices"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:internet-gateway/igw-0406cacb5fbde69c5",
            "id": "igw-0406cacb5fbde69c5",
            "owner_id": "114851843413",
            "region": "eu-central-1",
            "tags": {
              "Name": "go-microservices-vpc",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "tags_all": {
              "Name": "go-microservices-vpc",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c93f6c167b0dff3a",
            "association_id": "eipassoc-03f67ae6035fdfc84",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-083fc14b0cbcd4876",
            "network_interface_id": "eni-0126c02ca507ad6b5",
            "private_ip": "10.0.0.212",
            "public_ip": "3.72.223.6",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05e83956af121809d",
            "tags": {
              "Name": "go-microservices-vpc-eu-central-1a",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "tags_all": {
              "Name": "go-microservices-vpc-eu-central-1a",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ba61f727e6d8336c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-083fc14b0cbcd4876",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0ba61f727e6d8336c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114851843413",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0ba61f727e6d8336c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0406cacb5fbde69c5",
            "id": "r-rtb-021f08125d733effc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-021f08125d733effc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114851843413",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-021f08125d733effc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:route-table/rtb-0ba61f727e6d8336c",
            "id": "rtb-0ba61f727e6d8336c",
            "owner_id": "114851843413",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "go-microservices-vpc-private",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "tags_all": {
              "Name": "go-microservices-vpc-private",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114851843413",
            "id": "rtb-0ba61f727e6d8336c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:route-table/rtb-021f08125d733effc",
            "id": "rtb-021f08125d733effc",
            "owner_id": "114851843413",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "go-microservices-vpc-public",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "tags_all": {
              "Name": "go-microservices-vpc-public",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114851843413",
            "id": "rtb-021f08125d733effc",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a087408599ecde72",
            "region": "eu-central-1",
            "route_table_id": "rtb-0ba61f727e6d8336c",
            "subnet_id": "subnet-069c8a829bdd829ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ce7e508a14c5d4d",
            "region": "eu-central-1",
            "route_table_id": "rtb-0ba61f727e6d8336c",
            "subnet_id": "subnet-0c9b19a081ec7ea54"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041275fa210891554",
            "region": "eu-central-1",
            "route_table_id": "rtb-021f08125d733effc",
            "subnet_id": "subnet-05e83956af121809d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045f6fd0884bb72a7",
            "region": "eu-central-1",
            "route_table_id": "rtb-021f08125d733effc",
            "subnet_id": "subnet-042f56325de75abe4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:subnet/subnet-069c8a829bdd829ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069c8a829bdd829ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114851843413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "go-microservices-vpc-private-eu-central-1a",
              "Owner": "tirdad",
              "Project": "go-microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "go-microservices-vpc-private-eu-central-1a",
              "Owner": "tirdad",
              "Project": "go-microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114851843413",
            "id": "subnet-069c8a829bdd829ee",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:subnet/subnet-0c9b19a081ec7ea54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9b19a081ec7ea54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114851843413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "go-microservices-vpc-private-eu-central-1b",
              "Owner": "tirdad",
              "Project": "go-microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "go-microservices-vpc-private-eu-central-1b",
              "Owner": "tirdad",
              "Project": "go-microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114851843413",
            "id": "subnet-0c9b19a081ec7ea54",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:subnet/subnet-05e83956af121809d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e83956af121809d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114851843413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "go-microservices-vpc-public-eu-central-1a",
              "Owner": "tirdad",
              "Project": "go-microservices",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "go-microservices-vpc-public-eu-central-1a",
              "Owner": "tirdad",
              "Project": "go-microservices",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114851843413",
            "id": "subnet-05e83956af121809d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:subnet/subnet-042f56325de75abe4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042f56325de75abe4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114851843413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "go-microservices-vpc-public-eu-central-1b",
              "Owner": "tirdad",
              "Project": "go-microservices",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "go-microservices-vpc-public-eu-central-1b",
              "Owner": "tirdad",
              "Project": "go-microservices",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d10c2658baffeac5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114851843413",
            "id": "subnet-042f56325de75abe4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:114851843413:vpc/vpc-0d10c2658baffeac5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025f3fb54bce47410",
            "default_route_table_id": "rtb-08d8ab406781bf006",
            "default_security_group_id": "sg-0d5f5d469435b4a2d",
            "dhcp_options_id": "dopt-08cc674e15c82b2a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d10c2658baffeac5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d8ab406781bf006",
            "owner_id": "114851843413",
            "region": "eu-central-1",
            "tags": {
              "Name": "go-microservices-vpc",
              "Owner": "tirdad",
              "Project": "go-microservices"
            },
            "tags_all": {
              "Name": "go-microservices-vpc",
              "Owner": "tirdad",
              "Project": "go-microservices"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114851843413",
            "id": "vpc-0d10c2658baffeac5",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}